<resources>
    <string name="app_name">Chương trình đổi tiền</string>
    <string name="author">Điền họ và tên của bạn</string>
    <string name="computer">Điền tên máy đang dùng</string>
    <string name="textbox_hint">Nhập số tiền</string>
    <string name="usd_name">American Dollar</string>
    <string name="eur_name">European Cash</string>
    <string name="gbp_name">Greate Britain</string>
    <string name="aud_name">Australia Dollar</string>
    <string name="cad_name">Canadian Dollar</string>
    <string name="zar_name">South Africa Rand</string>
    <string name="nzd_name">New Zealand Dollarr</string>
    <string name="vnd_name">Việt Nam Đồng</string>
    <string name="inr_name">Indian Rupe</string>
    <string name="jpy_name">Yên Nhật</string>
    <string name="usd_uni">USD</string>
    <string name="eur_unit">EUR</string>
    <string name="gbp_unit">GBP</string>
    <string name="inr_unit">INR</string>
    <string name="aud_unit">AUD</string>
    <string name="cad_unit">CAD</string>
    <string name="zar_unit">ZAR</string>
    <string name="nzd_unit">NZD</string>
    <string name="jpy_unit">JPY</string>
    <string name="vnd_unit">VND</string>
<!--    bài 2-->
    <string name="app_name2">Đổi đơn vị đo</string>
    <string name="haily_unit">Hải Lý</string>
    <string name="dam_unit">Dặm</string>
    <string name="kilometer_unit">Kilometer</string>
    <string name="ly_unit">Lý</string>
    <string name="met_unit">Met</string>
    <string name="yard_unit">Yard</string>
    <string name="foot_unit">Foot</string>
    <string name="inches_unit">Inches</string>
    <string name="textbox_hint2">Nhập số</string>
</resources>