<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/txtNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textbox_hint"
            android:inputType="numberDecimal"/>
        <Spinner
            android:id="@+id/spnUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/usd"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd_uni"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/eur"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblEur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/gbp"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gbp_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblGbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/inr"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inr_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblInr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/aud"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aud_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblAud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/cad"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cad_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/zar"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zar_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblZar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/nzd"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nzd_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblNzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/jpy"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpy_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblJpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:src="@drawable/vnd"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vnd_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblVND"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>